Added ssl key, minor fixes

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -3,22 +3,20 @@ services:
   php-fpm:
     extends:
       service: php-fpm
-      file: ../docker-compose.yml
-    depends_on:
-      - mysql
+      file: ../gDocker/docker-compose.yml
     volumes:
       - .:/var/www
   mysql:
     extends:
       service: mysql
-      file: ../docker-compose.yml
+      file: ../gDocker/docker-compose.yml
   redis:
     extends:
       service: redis
-      file: ../docker-compose.yml
+      file: ../gDocker/docker-compose.yml
   webserver:
     extends:
       service: webserver
-      file: ../docker-compose.yml
+      file: ../gDocker/docker-compose.yml
     depends_on:
       - php-fpm
